--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" style="width: 100%; height: 100%">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Reduxjs-tookit Demo</title>
+    <title>react-hook-form-with-mui-demo</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body style="width: 100%; height: 100%; margin: 0">
+    <div id="root" style="width: 100%; height: 100%"></div>
   </body>
 </html>
